--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   file_picker: ^10.2.0
+  carousel_slider: ^5.1.1
+ 
+ 
 
 dev_dependencies:
   flutter_test:
