--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,18 @@ dependencies:
   permission_handler: ^12.0.0+1
   file_picker: ^10.2.0
   carousel_slider: ^5.1.1
+  dio: ^5.8.0+1
+  pretty_dio_logger: ^1.4.0
+  retrofit: ^4.4.2
+  json_annotation: ^4.9.0
+  logger: ^2.5.0
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
  
+
  
 
 dev_dependencies:
@@ -54,6 +65,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  retrofit_generator: ^9.2.0
+  build_runner: ^2.5.3
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
